--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 						<ul>	
 							
 							<li>Piano- en dwarsfluitdocente</li> 
+							<li>Middelbare school: gymnasium(eindexamen 1983)</li> 
 							<li>Afgestudeerd aan het conservatorium in Maastricht (1988 dwarsfluit, 1990 piano)</li> 
 							<li>Lesgegeven aan diverse muziekscholen (Maastricht, Kerkrade, Roermond en Geldrop)</li> 
 							<li>Sinds 2005 privé-docente in Sittard</li> 
