kvk nummer update

--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
 					</div>
 					<div class="col-six text-part">
 						<h2 class="animate-this" data-animate="fadeInRight">Coronavirus</h2>
-						<p class="animate-this" data-animate="fadeInRight">De ruimte is zodanig ingericht dat er lesgegeven kan worden op anderhalve meter afstand.
+						<p class="animate-this" data-animate="fadeInRight">De ruimte is zodanig ingericht dat er
+							lesgegeven kan worden op anderhalve meter afstand.
 							De pianotoetsen worden na iedere leerling ontsmet.
-							</p>
+						</p>
 					</div>
-				</div> 
+				</div>
 			</div>
 		</section>
 		<!--/  Over mij -->
@@ -172,8 +173,12 @@
 				<div class="col-twelve with-bottom-line">
 					<h2>Contact</h2>
 					<br>
-					<p class="lead">telefoonnummer: 046-4514244</p class="lead">
-					<p class="lead"> email-adres: cspronck@hotmail.nl </p class="lead">
+					<p class="lead"> telefoonnummer: 046-4514244
+						<br> mobiel nummer: 06-23320150
+					</p class="lead">
+					<p class="lead"> email-adres: cspronck@hotmail.nl
+						<br> KvK nummer: 77719921
+					</p class="lead">
 					<p class="lead"> adres: Frans Erensstraat 9
 						<br> 6136JE Sittard
 					</p class="lead">
